# ecosystem

./: .editorconfig  .eslintrc.json  .gitignore  .golangci.yml  .goreleaser.sdk.yaml  .prettierignore  .prettierrc  Cargo.toml  DEVELOPER.md  Dockerfile  README.md  deny.toml  docker-compose.yaml  docker-compose.yml  eslint.config.cjs  eslint.config.js  go.work  go.work.sum  jest.preset.js  nx.json  package-lock.json  package.json  pnpm-lock.yaml  project.json  qodana.yaml  tsconfig.base.json
.config/golangci/: golangci-soft.yml  golangci.yml
.config/goreleaser/: dockerize.yaml  goreleaser-cicd-image.yml  goreleaser.cli.yaml  goreleaser.plugin.yaml  goreleaser.sdk.yaml  goreleaser.workload.yaml  (+1 more)
.devcontainer/: README.md  devcontainer.json
.github/: CODEOWNERS  dependabot.yml
apps/workloads/private/edge/v2alpha/edge-router/: .npmignore  Cargo.toml  Dockerfile  README.md  fastly.dev-1.toml  fastly.toml  log.vcl  package.json  project.json  request.json  rust-toolchain.toml
apps/workloads/private/edge/v2alpha/edge-router/.cargo/: config.toml
apps/workloads/private/edge/v2alpha/edge-router/src/: context.rs  cors.rs  debug.rs  errors.rs  headers.rs  ingress.rs  main.rs  methods.rs  normalize.rs  observability.rs  otlp.rs  protocol.rs  query.rs  robots.rs  routing.rs
governance/: ANTITRUST.md  CHARTER.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  DEVELOPER-SETUP.md  DEVELOPERS.md  GOVERNANCE.md  IDE.md  MAINTAINERS.md  NIGHTLY.md  RELEASE.md  SNAPSHOT.md  STEERING-COMMITTEE.md  TRADEMARKS.md
proto/: README.md  buf.gen.yaml  buf.yaml  package.json  project.json
(+2020 files in other folders)
