[package]
name = "edge-router"
version = "0.1.0"
authors = []
edition = "2018"
# Remove this line if you want to be able to publish this crate as open source on crates.io.
# Otherwise, `publish = false` prevents an accidental `cargo publish` from revealing private source.
publish = false

[profile.release]
debug = 1

[dependencies]
fastly = "0.9.9"
glob = "0.3.1"
serde = "1.0.193"
serde_json = "1.0.108"
log-fastly = "0.9.9"
log = { version = "0.4.20", features = [] }
juniper = { version = "0.15.11", default-features = false }
opentelemetry_sdk = "0.20.0"
opentelemetry-semantic-conventions = "0.12.0"
bytes = "1.4.0"
#jeannotcompany_ecosystem_community_neoeinstein-prost = { version = "0.4.0-20240831145233-7b58c64d7c92.1", registry = "buf" }
#prost = "0.11"
#prost-types = "0.11"
#opentelemetry-proto = { version = "0.3.0", features = ["grpcio"] }
#opentelemetry-stdout = "0.1.0"
#opentelemetry = { version = "0.20", features = ["trace"] }
#opentelemetry_api = "0.20.0"
#opentelemetry-proto = "0.3.0"


